Fix issue with text scrolling overlapping the navbar

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -6,7 +6,8 @@
   width: 100%;
   background-color: #4056a1;
   color: #ffffff;
-  position: fixed
+  position: fixed;
+  z-index: 2;
 }
 
 .navbar span {
